prqlc/prql-compiler/tests/integration/snapshots/integration__queries__results@set_ops_remove.prql.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
description: "# Running on dialect `sqlite`\n\n# Query:\n---\n# mssql:test\nlet distinct = rel -> (from t = _param.rel | group {t.*} (take 1))\n\nfrom_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2], [2], [3]] }'\ndistinct\nremove (from_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2]] }')\nsort a\n"
expression: "# mssql:test\nlet distinct = rel -> (from t = _param.rel | group {t.*} (take 1))\n\nfrom_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2], [2], [3]] }'\ndistinct\nremove (from_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2]] }')\nsort a\n"
input_file: prqlc/prql-compiler/tests/integration/queries/set_ops_remove.prql
---
3
