prqlc/prql-compiler/tests/integration/snapshots/integration__queries__results@sort.prql.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
description: "# Running on dialect `sqlite`\n\n# Query:\n---\n# mssql:test\nfrom e=employees\nfilter first_name != \"Mitchell\"\nsort {first_name, last_name}\n\n# joining may use HashMerge, which can undo ORDER BY\njoin manager=employees side:left (e.reports_to == manager.employee_id)\n\nselect {e.first_name, e.last_name, manager.first_name}\n"
expression: "# mssql:test\nfrom e=employees\nfilter first_name != \"Mitchell\"\nsort {first_name, last_name}\n\n# joining may use HashMerge, which can undo ORDER BY\njoin manager=employees side:left (e.reports_to == manager.employee_id)\n\nselect {e.first_name, e.last_name, manager.first_name}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/sort.prql
---
Andrew,Adams,Michael
Jane,Peacock,Nancy
Laura,Callahan,Michael
Margaret,Park,Nancy
Michael,Mitchell,Andrew
Nancy,Edwards,Andrew
Robert,King,Michael
Steve,Johnson,Nancy
