prqlc/prql-compiler/tests/integration/snapshots/integration__queries__sql@read_csv.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# sqlite:skip\n# postgres:skip\n# mysql:skip\nfrom (read_csv \"data_file_root/media_types.csv\")\nsort media_type_id\n"
input_file: prqlc/prql-compiler/tests/integration/queries/read_csv.prql
---
WITH table_0 AS (
  SELECT
    *
  FROM
    read_csv('data_file_root/media_types.csv')
)
SELECT
  *
FROM
  table_0
ORDER BY
  media_type_id

